Correction globale (merci M.Lenoir)

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -2,19 +2,20 @@
 \label{cha:Conclusion}
 
 \lettrine{L}{a} première chose qui me vient à l'esprit est la
-progression que m'ont apportés ces stages. Je peux dire en toute
+progression que m'ont apporté ces stages. Je peux dire en toute
 humilité que j'en ressors grandi.
 
 J'ai pu m'appercevoir que l'entreprise utilisait toujours les
 technologies que j'ai mis en place durant la première année, des
-modifications ont été aportées mais mon code de base est toujours là, ce
-qui indique une certaine qualité dans le travail que j'ai pu accomplir.
+modifications ont été apportées mais mon code de base est toujours là,
+ce qui indique une certaine qualité dans le travail que j'ai pu
+accomplir.
 
 J'ai continué de former les développeurs sur Git pour qu'ils aillent
 toujours plus loin dans l'exploitation de celui-ci. En effet, j'avais
 constaté dès la première semaine du deuxième stage que quelques
-principes fondamentaux d'utilisation avait été oubliés. J'ai pu aussi
-leur présenter de nouvelles fonctionnalitées qui sont apparut pendant le
+principes fondamentaux d'utilisation avaientt été oubliés. J'ai pu aussi
+leur présenter de nouvelles fonctionnalités qui sont apparues pendant le
 laps de temps entre les deux stages. L'usage de base convient dans
 90\%{} des cas mais certaines particularités sont toujours bonnes à
 connaître.
