--- a/Partie1.tex
+++ b/Partie1.tex
@@ -6,10 +6,12 @@
 
 Ce chapitre illustre les entreprises dans lesquelles j'ai évolué. Dans
 un premier temps \emph{IdentIt} m'a accueilli pour le premier stage puis
-dans un second temps ce sont les deux entreprises \emph{IdentIt-A2SI}.
-Je présente aussi l'entreprise \emph{Syngenta} qui est le client qui
-utilise mon projet de stage IITAMP. Cette mise en \oe{}uvre est décrite
-dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
+dans un second temps ce sont les deux entreprises \emph{IdentIt-A2SI}\,
+\footnote{\emph{Automatismes Supervision Systèmes d'Information.}}.  Je
+présente aussi l'entreprise \emph{Syngenta} qui est le client qui
+utilise mon projet de stage IITAMP\, \footnote{\emph{IdentIt Apache
+Mysql Php.}}. Cette mise en \oe{}uvre est décrite dans le chapitre
+\ref{cha:Mise en oeuvre d'IITAMP}.
 
 \end{it}
 
@@ -48,17 +50,17 @@ dans la rue de la République à Saint Pol Sur Mer.
 \subsection{La fusion} % (fold)
 \label{sub:La fusion}
 
-\emph{IdentIt} est une sous-cursale d'\emph{A2SI} qui fut créée pour
+\emph{IdentIt} est une succursale d'\emph{A2SI} qui fut créée pour
 répondre aux besoins de solutions informatiques toujours plus grands
 dans les industries. Ceux-ci ont tout d'abord emménagé à Petite-Synthe
 pendant deux ans dans une pièce d'approximativement vingt-cinq mètres
 carrés pour quatre personnes ce qui n'était pas évident lorsque l'on
 accueille une personne supplémentaire, nous étions un peu serrés.
 
-Au cours du deuxième stage, les entreprises ont se sont regroupées dans
+Au cours du deuxième stage, les entreprises se sont regroupées dans
 un même bâtiment, en zone industrielle de Saint Pol Sur Mer. Cela m'a
 permis de vivre une \og fusion \fg{} d'entreprise, d'évoluer dans un
-grand bâtiment neuf d'à peu près cinq-cent mètres carrés ainsi que de
+grand bâtiment neuf d'à peu près cinq cent mètres carrés ainsi que de
 connaitre de nouvelles personnes.
 
 % subsection La fusion (end)
