--- a/Partie2.tex
+++ b/Partie2.tex
@@ -26,7 +26,7 @@ et pourquoi. Ils sont par conséquent capables de dire qui a écrit chaque
 ligne de chaque fichier et dans quel but ; si deux personnes travaillent
 simultanément sur un même fichier, ils sont capables de fusionner leurs
 modifications et d’éviter que le travail d’une de ces personnes ne soit
-écrasé. La figure~\ref{flow} qui ce trouve en page \pageref{flow}
+écrasé. La figure~\ref{flow} qui se trouve en page \pageref{flow}
 illustre basiquement l'utilisation de Git.
 
 Ces logiciels ont donc par conséquent deux utilités principales :
@@ -138,7 +138,8 @@ qui analyse un dossier défini et qui liste les différents dépôts tout en
 leur mettant les bonnes adresses de téléchargement en préfixe comme nous
 le montre la figure~\ref{repo} en page \pageref{repo}. Du coup, un
 simple copier-coller du lien du dépôt voulu dans tortoiseGit suffit pour
-cloner. Gain de productivité et de simplicité réunies.
+cloner. C'est donc un gain de productivité et de simplicité pour
+l'entreprise.
 
 \begin{figure}
     \begin{center}
@@ -157,7 +158,7 @@ cloner. Gain de productivité et de simplicité réunies.
 Une fois que les développeurs sont satisfaits de leurs modifications,
 ils doivent mettre à jour le dépôt distant pour partager leurs travaux.
 Une fois les modifications validées par le chef de projet, celui-ci les
-mets en ligne sur le dépôt de production. J'ai créé un script Batch\,
+met en ligne sur le dépôt de production. J'ai créé un script Batch\,
 \footnote{Désigne un fichier qui contient une suite de commandes qui
 seront traitées automatiquement par Windows.} \og modèle \fg{} pour que
 cela se fasse en un clic.
