--- a/Partie3.tex
+++ b/Partie3.tex
@@ -19,16 +19,16 @@
 \lettrine{C}{ertaines} entreprises, dans un but de confidentialité
 préfèrent utiliser des applications en intranet. Dans le cadre de mon
 stage, un serveur sous Windows Server 2008 utilise IITAMP ainsi qu'une
-application d'\emph{IdentIt} pour qu'a partir du réseau local tout les
+application d'\emph{IdentIt} pour qu'à partir du réseau local tous les
 ordinateurs puissent utiliser l'application. De ce fait, le produit
 n'est pas accessible via Internet.
 
 La confidentialité n'est pas le seul atout. En effet, passer par un
-réseau d'entreprise en terme de performance est avantageux car les
-requêtes entre le client et le serveur ce font \emph{intra muros} ;
+réseau d'entreprises en terme de performance est avantageux car les
+requêtes entre le client et le serveur se font \emph{intra muros} ;
 alors que passer par un hébergeur qui peut se trouver à des milliers de
 kilomètres, affecte les délais. Utiliser une solution d'hébergement sur
-le réseau des réseaux à un coût alors qu'une solution locale n'est pas
+le réseau des réseaux a un coût alors qu'une solution locale n'est pas
 forfaitaire.
 
 Dans le cas d'un hébergement, si la connexion à internet vient à être
@@ -40,7 +40,7 @@ solution cela continue de fonctionner.
 \label{sec:La base applicative}
 
 Je suis tout d'abord parti d'une base XAMPP générique. Il s'agit d'un
-logiciel libre développé par une équipe de bénévoles. Cette ensemble de
+logiciel libre développé par une équipe de bénévoles. Cet ensemble de
 programmes permet de mettre en \oe{}uvre un serveur web sur un PC
 Windows à des fins de développement. La suite XAMPP regroupe les
 logiciels Apache\, \footnote{Serveur HTTP}, MySQL\, \footnote{Serveur de
@@ -58,7 +58,7 @@ produits \emph{IdentIt}.
 \subsection{La maintenabilité} % (fold)%{{{
 \label{sub:La maintenabilité}
 
-Pour proposer une maintenance de bug efficace et facile, il a fallut
+Pour proposer une maintenance de bug efficace et facile, il a fallu
 installer le module PHP \emph{Xdebug} qui permet d'afficher des erreurs
 plus significatives que celles de PHP par défaut. En effet, celui-ci
 permet la coloration syntaxique ainsi que l'affichage des valeurs des
@@ -66,7 +66,7 @@ variables qui précèdent le bug. J'ai aussi externalisé les fichiers
 d'historique dans un dossier séparé, ce qui permet un accès plus facile
 dans le cas où il faudrait demander au client de nous envoyer le dossier
 archivé par courrier électronique pour l'analyser si Xdebug ne suffisait
-pas pour d'écrire l'erreur rencontré par téléphone.
+pas pour décrire l'erreur rencontré par téléphone.
 % subsection La maintenabilité (end)%}}}
 
 \subsection{L'évolutivité} % (fold)%{{{
@@ -75,7 +75,7 @@ pas pour d'écrire l'erreur rencontré par téléphone.
 Comme les dossiers sont séparés méticuleusement, une mise à jour de
 l'applicatif web ou du serveur IITAMP se fait à partir de quelques
 étapes très simples contrairement au logiciel de base qui aurait
-nécessité beaucoup de manipulations, la plus part de ces interventions
+nécessité beaucoup de manipulations, la pluspart de ces interventions
 étant demandées au client lorsque les applications seront mises en
 production.
 % subsection L'évolutivité (end)%}}}
@@ -89,32 +89,32 @@ efficace de celles-ci. La sauvegarde se fait à partir d'une tache
 journalière que j'ai décrite dans un document pour l'utilisateur.
 % subsection La pérennité des données (end)%}}}
 
-\subsection{L'éfficacité} % (fold)%{{{
-\label{sub:L'éfficacité}
+\subsection{L'efficacité} % (fold)%{{{
+\label{sub:L'efficacité}
 
 Pour optimiser le serveur IITAMP, une inspection profonde du logiciel
 fut nécessaire. En effet, celui-ci est composé de base d'une multitude
 de librairies et modules qui ne sont pas forcément utiles aux
 applications développées par \emph{IdentIt}. De ce fait, un nettoyage
-fut entrepris. Un gain de 20 mega-octets a été constaté.
-% subsection L'éfficacité (end)%}}}
+fut entrepris. Un gain de 20 méga-octets a été constaté.
+% subsection L'efficacité (end)%}}}
 
 \subsection{La simplicité} % (fold)%{{{
 \label{sub:La simplicité}
 
 Pour rendre simple l'utilisation du serveur web pour le client, il a
-fallut créer des scripts d'automatisation pour certaines taches pas
+fallu créer des scripts d'automatisation pour certaines taches pas
 forcément évidentes pour les non-initiés. Par exemple l'installation des
 applications en tant que services ; ainsi que le démarrage des dit
 services.  J'ai également développé une page d'index au cas où le client
-ait plusieurs applications web de l'entreprise \emph{IdentIt}, auquel
-cas, une sélection de l'application est à faire.
+a plusieurs applications web de l'entreprise \emph{IdentIt}, auquel cas,
+une sélection de l'application est à faire.
 % subsection La simplicité (end)%}}}
 
 \subsection{La propriété} % (fold)%{{{
 \label{sub:La propriété}
 
-Pour la partie juridique, dans un soucis de propriété intellectuelle,
+Pour la partie juridique, dans un souci de propriété intellectuelle,
 j'ai installé un module qui permet le chiffrement du code source PHP,
 cette extension s'appelle Bcompiler et m'a servi lors de l'installation
 des applications après la finalisation du serveur IITAMP.
@@ -128,7 +128,7 @@ des applications après la finalisation du serveur IITAMP.
 
   \item[Création d'un IITAMP :] Permet de recréer un serveur IITAMP à
     partir d'un serveur XAMPP qui incorpore des nouveautés ou des mises
-    à jours.
+    à jour.
 
   \item[Mise en \oe{}uvre d'un IITAMP :] mise en place de l'IITAMP
     nouvellement installé en entreprise ou mise à jour de celui-ci.
