--- a/Remerciements.tex
+++ b/Remerciements.tex
@@ -9,7 +9,7 @@
     plus rapidement ainsi que l'enseignement des habitudes propres à
     l'entreprise ;
     \item La société IdentIt pour avoir accepté ma candidature, j'espère avoir
-    été à la hauteur de leurs attentes ;
+    été à la hauteur de ses attentes ;
     \item Les développeurs pour m'avoir aiguillé quand j'étais en détresse ;
     \item L'équipe enseignante pour nous avoir appris les fondements du
     développement et l'univers informatique tout autour qui en découle.
