Correction globale (merci Julie)

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -21,11 +21,11 @@ laps de temps entre les deux stages. L'usage de base convient dans
 connaître.
 
 J'ai découvert le travail de développeur en entreprise et je dois dire
-que cela me plaît, cependant ce n'est pas toujours évident.  Bloquer sur
-un problème toute la journée sans avancer est très pénible
-intellectuellement, j'ai connu beaucoup de maux de tête et de matins
-difficiles. Travailler toute la journée à concevoir des algorithmes est
-parfois éprouvant\dots
+que cela me plaît, cependant ce n'est pas toujours évident. Non
+seulement, le fait d'être bloqué sur un problème toute la journée sans
+avancer est très pénible intellectuellement (j'ai connu beaucoup de maux
+de tête et de matins difficiles) mais aussi celui de travailler toute la
+journée à concevoir des algorithmes est parfois éprouvant\dots
 
 J'ai été très satisfait des échanges que j'ai pu avoir avec l'équipe.
 Développer est une chose mais proposer, débattre, trouver les meilleures
@@ -37,6 +37,6 @@ orientation. Je souhaite continuer mes études vers une licence
 professionnelle systèmes informatiques et logiciels option \og
 Développement et Administration de sites Internet et Intranet \fg{} qui
 permettra de me spécialiser dans le Web et la sécurité, qui sont des
-marchés porteurs autant dans les entreprises publiques que privées,
+marchés porteurs aussi bien dans les entreprises publiques que privées,
 avant de m'insérer dans le monde du travail.
 % chapter Conclusion (end)
