--- a/Intro.tex
+++ b/Intro.tex
@@ -24,8 +24,8 @@ client, le tout en s'accordant avec le système d'information de
 l'acquéreur.
 
 Cette note de synthèse suit un plan spécifique, cependant les événements
-ne se sont pas passés forcément dans l'ordre dans lequel ils sont
+ne se sont pas forcément passés dans l'ordre dans lequel ils sont
 présentés. En effet, à cause des difficultés rencontrées et des
-problématiques nouvelles, données en cours de stage, je suis souvent
+nouvelles problématiques données en cours de stage, je suis souvent
 passé d'une réalisation à une autre.
 % chapter Introduction (end)
