--- a/Partie1.tex
+++ b/Partie1.tex
@@ -53,13 +53,13 @@ dans la rue de la République à Saint Pol Sur Mer.
 \emph{IdentIt} est une succursale d'\emph{A2SI} qui fut créée pour
 répondre aux besoins de solutions informatiques toujours plus grands
 dans les industries. Ceux-ci ont tout d'abord emménagé à Petite-Synthe
-pendant deux ans dans une pièce d'approximativement vingt-cinq mètres
-carrés pour quatre personnes ce qui n'était pas évident lorsque l'on
-accueille une personne supplémentaire, nous étions un peu serrés.
+pendant deux ans dans une pièce qui faisait approximativement vingt-cinq
+mètres carrés pour quatre personnes ce qui n'était pas évident lorsque
+l'on accueille une personne supplémentaire, nous étions un peu serrés.
 
-Au cours du deuxième stage, les entreprises se sont regroupées dans
-un même bâtiment, en zone industrielle de Saint Pol Sur Mer. Cela m'a
-permis de vivre une \og fusion \fg{} d'entreprise, d'évoluer dans un
+Au cours du deuxième stage, les entreprises se sont regroupées dans un
+même bâtiment, en zone industrielle de Saint Pol Sur Mer. Cela m'a
+permis d'assister à une \og fusion \fg{} d'entreprise, d'évoluer dans un
 grand bâtiment neuf d'à peu près cinq cent mètres carrés ainsi que de
 connaitre de nouvelles personnes.
 
