--- a/Partie2.tex
+++ b/Partie2.tex
@@ -57,10 +57,10 @@ Ces logiciels ont donc par conséquent deux utilités principales :
 \subsection{L'installation} % (fold)%{{{
 \label{sub:L'installation}
 
-À mis parcours, nous nous sommes heurtés à un problème technique. Le
+À mi-parcours, nous nous sommes heurtés à un problème technique. Le
 serveur de l'entreprise ne contenait pas de version récente de Git. En
 sachant que celui-ci est de type mutualisé\, \footnote{C'est un concept
-d'hébergement dont la caractéristique principale est d'être partagé par
+d'hébergement dont la caractéristique principale est d'être partagée par
 plusieurs utilisateurs.}, nous n'avions pas les autorisations
 nécessaires pour installer une nouvelle version.
 
@@ -72,14 +72,14 @@ développeurs de travailler en même temps sur une branche différente de
 celle par défaut, par exemple pour expérimenter de nouvelles
 implémentations à plusieurs.
 
-À ce moment-là j'ai été très déçu et pensais mon travail inutilisable.
-Cependant, mes efforts n'ont pas été vains puisqu'après quelques
-recherches, j'ai trouvé sur internet un utilisateur ayant réussi à
-installer Git sur un serveur mutualisé.  Nous n'avions pas les droits
-d'accès aux dossiers des programmes mais rien ne nous empêchait de
-compiler Git à partir des sources pour nous permettre de créer en local
-le logiciel. Ceci étant fait, en redéfinissant la variable système qui
-stocke les chemins des applications, nous avons pu utiliser notre
+À ce moment-là j'ai été très déçu et je pensais que mon travail était
+inutilisable.  Cependant, mes efforts n'ont pas été vains puisqu'après
+quelques recherches, j'ai trouvé sur internet un utilisateur ayant
+réussi à installer Git sur un serveur mutualisé.  Nous n'avions pas les
+droits d'accès aux dossiers des programmes mais rien ne nous empêchait
+de compiler Git à partir des sources pour nous permettre de créer en
+local le logiciel. Ceci étant fait, en redéfinissant la variable système
+qui stocke les chemins des applications, nous avons pu utiliser notre
 compilé dernier cri.
 % subsection L'installation (end)%}}}
 % section Git : Le gestionnaire de code source (end)%}}}
@@ -128,7 +128,7 @@ les choses répétitives.
 Mon travail suivant consista à lister les dépôts Git sur une page Web.
 Le serveur OVH centralise les codes sources de la société, les
 développeurs, eux doivent récupérer une copie des dossiers pour pouvoir
-travailler dessus. Seulement, lancer FilleZilla\, \footnote{FileZilla
+travailler dessus. Seulement, lancer FileZilla\, \footnote{FileZilla
 est un logiciel gratuit qui permet de se connecter à distance sur un
 serveur pour y télécharger des fichiers via le Protocole FTP.} pour
 connaître les noms des répertoires Git puis recopier le bon lien
