--- a/Partie3.tex
+++ b/Partie3.tex
@@ -27,7 +27,7 @@ La confidentialité n'est pas le seul atout. En effet, passer par un
 réseau d'entreprises en terme de performance est avantageux car les
 requêtes entre le client et le serveur se font \emph{intra muros} ;
 alors que passer par un hébergeur qui peut se trouver à des milliers de
-kilomètres, affecte les délais. Utiliser une solution d'hébergement sur
+kilomètres affecte les délais. Utiliser une solution d'hébergement sur
 le réseau des réseaux a un coût alors qu'une solution locale n'est pas
 forfaitaire.
 
@@ -66,7 +66,7 @@ variables qui précèdent le bug. J'ai aussi externalisé les fichiers
 d'historique dans un dossier séparé, ce qui permet un accès plus facile
 dans le cas où il faudrait demander au client de nous envoyer le dossier
 archivé par courrier électronique pour l'analyser si Xdebug ne suffisait
-pas pour décrire l'erreur rencontré par téléphone.
+pas pour décrire l'erreur rencontrée par téléphone.
 % subsection La maintenabilité (end)%}}}
 
 \subsection{L'évolutivité} % (fold)%{{{
@@ -103,12 +103,12 @@ fut entrepris. Un gain de 20 méga-octets a été constaté.
 \label{sub:La simplicité}
 
 Pour rendre simple l'utilisation du serveur web pour le client, il a
-fallu créer des scripts d'automatisation pour certaines taches pas
-forcément évidentes pour les non-initiés. Par exemple l'installation des
-applications en tant que services ; ainsi que le démarrage des dit
-services.  J'ai également développé une page d'index au cas où le client
-a plusieurs applications web de l'entreprise \emph{IdentIt}, auquel cas,
-une sélection de l'application est à faire.
+fallu créer des scripts d'automatisation pour certaines tâches qui
+n'étaient pas forcément évidentes pour les non-initiés. Par exemple
+l'installation des applications en tant que services ; ainsi que le
+démarrage des dit services.  J'ai également développé une page d'index
+au cas où le client aurait plusieurs applications web de l'entreprise
+\emph{IdentIt}, auquel cas, une sélection de l'application est à faire.
 % subsection La simplicité (end)%}}}
 
 \subsection{La propriété} % (fold)%{{{
@@ -134,7 +134,7 @@ des applications après la finalisation du serveur IITAMP.
     nouvellement installé en entreprise ou mise à jour de celui-ci.
 
   \item[Préparation d'une application :] Illustre les étapes de
-    préparation d'une application Web d'\emph{IdentIt} pour quelle soit
+    préparation d'une application Web d'\emph{IdentIt} pour qu'elle soit
     parfaitement intégrée à IITAMP.
 
   \item[Déploiement d'une application :] Comment mettre en place ou
